--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Libre+Caslon+Display&family=Quicksand:wght@300..700&family=Sora:wght@100..800&display=swap');
         </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.js">
 </head>
 <body>
     <header>
@@ -18,6 +19,7 @@
             </div>
             <div >
                 <ul class="top-nav-li">
+                    <li><i class="fa-solid fa-circle-half-stroke"></i></li>
                     <li>Home</li>
                     <li>About</li>
                     <li style="color: #00a896;">Contact</li>
@@ -164,7 +166,7 @@
                     </ul>
                     <ul class="sft-ul">
                         <h2>Language</h2>
-                        <li><b>English:</b> Fluent in both essesntail Written and Spoken aspects</li>
+                        <li><b>English:</b> Fluent in both essential Written and Spoken English</li>
                         <li><b>Japanese:</b> Versed in basic Speaking by utilizing most used keywords and phrases</li>
                     </ul>
                 </div>
@@ -178,10 +180,17 @@
             <ul class="ft-ul">
                 <li>Personal Cell No: +8801883324370</li>
                 <li>Email: tanvir.ahmed.khan1@g.bracu.ac.bd</li>
-                <li><a href="https://github.com/ezxlib">Github <i class="fa-brands fa-github"></i></a></li>
-                <li><a href="https://discord.gg/JPZzE8PK">Discord <i class="fa-brands fa-discord"></i></a></li>
+                <li><a href="https://github.com/ezxlib" target="_blank">Github <i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://discord.gg/JPZzE8PK" target="_blank">Discord <i class="fa-brands fa-discord"></i></a></li>
             </ul>
+            <div id="pageinf">
+
+            </div>
         </div>
+
     </footer>
+    <script>
+        document.getElementById('pageinf').innerHTML = 'Page Location: ' + window.location.href + '  ' + 'Last Modified: ' + document.lastModified;
+    </script>
 </body>
 </html>
