--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button class="btn">Contact</button>
                 </div>
             </div>
-            <img style="border-radius: 100;" height="300px" src="img/ben-sweet-2LowviVHZ-E-unsplash.jpg" alt="profile picture">
+            <img style="height: 300px;" src="img/ben-sweet-2LowviVHZ-E-unsplash.jpg" alt="profile picture">
         </div>
     </header>
     <nav class="navigation">
@@ -59,8 +59,8 @@
                 </div>
                 <div class="abt-sub-div">
                     <h3>Extra-curricular ACtivities</h3>
-                    <p>Grew up in culture riched institution, particpated in many Chorus band at highschool and college events. <br>
-                    Was even part of and cameo'd at the BURed club promo documentary.</p>
+                    <p>Grew up around culture riched institutions, particpated in many Chorus band at highschool and college events. <br>
+                    Was part of and cameo'd at the BURed club promo documentary.</p>
                 </div>
             </div>
             <div class="abt-sub-div2" style="margin-top: 2%; ">
@@ -152,10 +152,11 @@
                     </tbody>
                 </table>
                 <div class="sft-skill">
+                    <h2>Soft Skill</h2>
                     <ul class="sft-ul">
-                        <h2>Soft SKill</h2>
+                        
                         <li>
-                            <b>Communicative:</b> Friendly, Approachable manners and behaviours
+                            <b>Communicative:</b> Friendly, Approachable and Ambivert mannerisms and behaviours
                         </li>
                         <li>
                             <b>Technical:</b> Scientifc, Tried and Tested and Analytical approach
@@ -164,8 +165,9 @@
                             <b>Critical Thinker:</b> Out of the Box Methodologies and a Problem Solver
                         </li>
                     </ul>
+                    <h2>Language</h2>
                     <ul class="sft-ul">
-                        <h2>Language</h2>
+                        
                         <li><b>English:</b> Fluent in both essential Written and Spoken English</li>
                         <li><b>Japanese:</b> Versed in basic Speaking by utilizing most used keywords and phrases</li>
                     </ul>
