--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Libre+Caslon+Display&family=Quicksand:wght@300..700&family=Sora:wght@100..800&display=swap');
         </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="styles.js">
 </head>
 <body>
@@ -50,8 +50,8 @@
     <main>
         <div class="abt" id="abt">
             <h2>Stuffs About Me</h2>
-            <p>I used to tweak around game engine projects specially Godot a game engine that utilizes python based scripts, to get insights in Game Development, made some progress then moved onto Web Development to acquaire fundamental knowldge. 
-                Nowdays my main interest in CS domain is ML and DL as I have decided to utilize such topics to adapt into the current tech ecosystem</p>
+            <p>I used to tweak around game engine projects specially Godot, a game engine that utilizes python based scripts, to get insights in Game Development, made slight progress then moved onto Web Development to acquire relevant expertise. 
+                Nowdays my main interest lies in the domain of ML and DL as I have decided to utilize such topics to adapt into the current tech ecosystem.</p>
             <div class="abt-div">
                 <div class="abt-sub-div">
                     <h3>Hobbies</h3>
@@ -76,7 +76,7 @@
             </div>
         </div>
         <div>
-            <div class="qte">“Any fool can write code that a computer can understand. <br>Good programmers write code that humans can understand.” 
+            <div class="qte"><b>“</b>Any fool can write code that a computer can understand. <br>Good programmers write code that humans can understand.<b>”</b> 
                 <br>– Martin Fowler, software engineer, object-oriented programming pioneer</div>
         </div>
         <div class="info-table" id="inf">
@@ -88,7 +88,7 @@
                     <tr>
                         <th scope="row">Name</th>
                         <th scope="row">DOB</th>
-                        <th scope="row">Cell Number</th>
+                        <th scope="row">Cell Phone Number</th>
                         <th scope="row">Email</th>
                         <th scope="row">From</th>
                     </tr>
@@ -125,27 +125,27 @@
                     </thead>
                     <tbody class="tech-tbody">
                         <tr>
-                            <td><i class="fa-brands fa-python"></i>Python</td>
+                            <td><i class="fa-brands fa-python"></i> Python</td>
                             <td>Acquinted with relatively advanced terminologies and implementaions<br>
                             Skill Level: Adept </td>
                         </tr>
                         <tr>
-                            <td><i class="fa-brands fa-html5"></i>HTML</td>
+                            <td><i class="fa-brands fa-html5"></i> HTML</td>
                             <td>Familiar with the bascis and ready to be exposed to more advanced stuff the language offers. <br>
                             Skill Level: Apprentice</td>
                         </tr>
                         <tr>
-                            <td><i class="fa-brands fa-css3"></i>CSS</td>
+                            <td><i class="fa-brands fa-css3"></i> CSS</td>
                             <td>Familiar with the bascis and ready to be exposed to more advanced stuff the language offers. <br>
                                 Skill Level: Apprentice</td>
                         </tr>
                         <tr>
-                            <td><i class="fa-brands fa-js"></i>Javascript</td>
+                            <td><i class="fa-brands fa-js"></i> Javascript</td>
                             <td>Versed in fundamental concepts and logic building aspects of the language. <br>
                             SKill Level: Novice</td>
                         </tr>
                         <tr>
-                            <td><i class="fa-brands fa-php"></i>PHP</td>
+                            <td><i class="fa-brands fa-php"></i> PHP</td>
                             <td>Versed in fundamental concepts and logic building aspects of the language. <br>
                                 SKill Level: Novice</td>
                         </tr>
@@ -153,8 +153,7 @@
                 </table>
                 <div class="sft-skill">
                     <h2>Soft Skill</h2>
-                    <ul class="sft-ul">
-                        
+                    <ul class="sft-ul">   
                         <li>
                             <b>Communicative:</b> Friendly, Approachable and Ambivert mannerisms and behaviours
                         </li>
@@ -167,8 +166,8 @@
                     </ul>
                     <h2>Language</h2>
                     <ul class="sft-ul">
-                        
                         <li><b>English:</b> Fluent in both essential Written and Spoken English</li>
+
                         <li><b>Japanese:</b> Versed in basic Speaking by utilizing most used keywords and phrases</li>
                     </ul>
                 </div>
@@ -178,18 +177,16 @@
     </main>
     <footer>
         <div class="ft-div">
-            <h2>Met your Criteria? Contact me through:</h2>
+            <h2>Interested to working with me? Find me via:</h2>
             <ul class="ft-ul">
-                <li>Personal Cell No: +8801883324370</li>
+                <li>Personal Cell Phone No: +8801883324370</li>
                 <li>Email: tanvir.ahmed.khan1@g.bracu.ac.bd</li>
                 <li><a href="https://github.com/ezxlib" target="_blank">Github <i class="fa-brands fa-github"></i></a></li>
                 <li><a href="https://discord.gg/JPZzE8PK" target="_blank">Discord <i class="fa-brands fa-discord"></i></a></li>
             </ul>
-            <div id="pageinf">
-
-            </div>
+            <div id="pageinf"></div>
+            <div>&copy; 22201103, 2025</div>
         </div>
-
     </footer>
     <script>
         document.getElementById('pageinf').innerHTML = 'Page Location: ' + window.location.href + '  ' + 'Last Modified: ' + document.lastModified;
