--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="abt-sub-div2" style="margin-top: 2%; ">
-                <h3 style="color: white;">My top played 5 Video Games Ever</h3>
+                <h3 style="color: white;">My top 5 played Video Games Ever</h3>
                 <ol style="display: flex; justify-content: space-around; z-index: 1; color: wheat;">
                     <li>Assassin's Creed Brotherhood</li>
                     <li>Call of Duty: Modern Warfare 2</li>
@@ -126,28 +126,28 @@
                     <tbody class="tech-tbody">
                         <tr>
                             <td><i class="fa-brands fa-python"></i> Python</td>
-                            <td>Acquinted with relatively advanced terminologies and implementaions<br>
-                            Skill Level: Adept </td>
+                            <td>Acquinted with relatively advanced terminologies and implementaions.<br>
+                            <b>Skill Level: Adept</b> </td>
                         </tr>
                         <tr>
                             <td><i class="fa-brands fa-html5"></i> HTML</td>
                             <td>Familiar with the bascis and ready to be exposed to more advanced stuff the language offers. <br>
-                            Skill Level: Apprentice</td>
+                            <b>Skill Level: Apprentice</b></td>
                         </tr>
                         <tr>
                             <td><i class="fa-brands fa-css3"></i> CSS</td>
                             <td>Familiar with the bascis and ready to be exposed to more advanced stuff the language offers. <br>
-                                Skill Level: Apprentice</td>
+                                <b>Skill Level: Apprentice</b></td>
                         </tr>
                         <tr>
                             <td><i class="fa-brands fa-js"></i> Javascript</td>
                             <td>Versed in fundamental concepts and logic building aspects of the language. <br>
-                            SKill Level: Novice</td>
+                            <b>Skill Level: Novice</b></td>
                         </tr>
                         <tr>
                             <td><i class="fa-brands fa-php"></i> PHP</td>
                             <td>Versed in fundamental concepts and logic building aspects of the language. <br>
-                                SKill Level: Novice</td>
+                                <b>Skill Level: Novice</b></td>
                         </tr>
                     </tbody>
                 </table>
