typo & grammar fix

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </main>
     <footer>
         <div class="ft-div">
-            <h2>Interested to working with me? Find me via:</h2>
+            <h2>Interested to work with me? Find me via:</h2>
             <ul class="ft-ul">
                 <li>Personal Cell Phone No: +8801883324370</li>
                 <li>Email: tanvir.ahmed.khan1@g.bracu.ac.bd</li>
