--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
             <ul class="ft-ul">
                 <li>Personal Cell Phone No: +8801883324370</li>
                 <li>Email: tanvir.ahmed.khan1@g.bracu.ac.bd</li>
-                <li><a href="https://github.com/ezxlib" target="_blank">Github <i class="fa-brands fa-github"></i></a></li>
-                <li><a href="https://discord.gg/JPZzE8PK" target="_blank">Discord <i class="fa-brands fa-discord"></i></a></li>
+                <li>My <a href="https://github.com/NK49zx" target="_blank">Github <i class="fa-brands fa-github"></i></a></li>
+                <li>Join the <a href="https://discord.gg/JPZzE8PK" target="_blank">Discord <i class="fa-brands fa-discord"></i></a> server</li>
             </ul>
             <div id="pageinf"></div>
             <div>&copy; 22201103, 2025</div>
